recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:6: error: not found: value longueur
     spiral(steps-1,angle,longueur+3, increment)
                          ^