recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps==0){
    avance(0)
  }
  else {
   	spiral(steps-1,angle,longueur+3, increment)
  }
}